# lidsor_python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  python-package.yml  setup.py  test.py
examples/: example_filter.py  ground_segment.py
include/: lidsor_filter.hpp
notebooks/: lidsor.ipynb  lidsor_groundsegment.ipynb  test.ipynb
src/: lidsor_filter.cpp  lidsor_module.cpp
